backend/test_log_final_21.txt

> Task :compileJava FAILED
D:\berodu\SORIN\project\Newsletter\backend\src\main\java\com\kz\magazine\service\EventService.java:61: error: cannot find symbol
                .createdBy(user.getId())
                               ^
  symbol:   method getId()
  location: variable user of type User
D:\berodu\SORIN\project\Newsletter\backend\src\main\java\com\kz\magazine\service\EventService.java:62: error: cannot find symbol
                .updatedBy(user.getId())
                               ^
  symbol:   method getId()
  location: variable user of type User
D:\berodu\SORIN\project\Newsletter\backend\src\main\java\com\kz\magazine\service\EventService.java:66: error: cannot find symbol
        auditLogService.logAction(user.getId(), "CREATE", "EVENT", savedEvent.getId(), null, savedEvent.toString());
                                      ^
  symbol:   method getId()
  location: variable user of type User
D:\berodu\SORIN\project\Newsletter\backend\src\main\java\com\kz\magazine\service\EventService.java:101: error: cannot find symbol
        auditLogService.logAction(user.getId(), "UPDATE", "EVENT", event.getId(), oldEventStr, event.toString());
                                      ^
  symbol:   method getId()
  location: variable user of type User
D:\berodu\SORIN\project\Newsletter\backend\src\main\java\com\kz\magazine\service\EventService.java:110: error: cannot find symbol
        event.delete(user.getId());
                         ^
  symbol:   method getId()
  location: variable user of type User
D:\berodu\SORIN\project\Newsletter\backend\src\main\java\com\kz\magazine\service\EventService.java:111: error: cannot find symbol
        auditLogService.logAction(user.getId(), "DELETE", "EVENT", event.getId(), null, null);
                                      ^
  symbol:   method getId()
  location: variable user of type User
D:\berodu\SORIN\project\Newsletter\backend\src\main\java\com\kz\magazine\service\EventService.java:156: error: cannot find symbol
        auditLogService.logAction(user.getId(), "DRAW", "EVENT", eventId, null, "Count: " + count);
                                      ^
  symbol:   method getId()
  location: variable user of type User
7 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

BUILD FAILED in 4s
1 actionable task: 1 executed
